test/spec_vectors/simd_f64x2_rounding/fail/module_19.wat
(module (func (result v128) (f64x2.trunc (i32.const 0))))